<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="all"
  >
       <PreferenceCategory
            android:key="@string/general"
            android:title="@string/general">
            <CheckBoxPreference
               android:key="@string/change_wallpaper"
               android:title="@string/change_wallpaper" 
               android:summary="@string/change_wallpaper_action" 
               />
            <ListPreference
               android:key="@string/change_time"
               android:title="@string/change_time" 
               android:summary="@string/change_time_setting" 
               android:dialogTitle="@string/change_time"
               android:entries="@array/change_time"
               android:entryValues="@array/change_time_value"
               />
            <PreferenceScreen 
               android:key="@string/widget_change_wallpaper"
               android:title="@string/widget_change_wallpaper"
               android:summary="@string/widget_change_wallpaper_detail"
            ></PreferenceScreen>
            <PreferenceScreen 
               android:key="@string/clear_cache"
               android:title="@string/clear_cache" 
               android:summary="@string/clear_cache_tip" />
        </PreferenceCategory>
         <PreferenceCategory
            android:title="@string/um_score"
            android:key="@string/um_score"
            >
            <PreferenceScreen 
               android:key="@string/current_score"/>
            <PreferenceScreen 
               android:key="@string/login_score"
               android:title="@string/login_score"
               android:summary="@string/get_score_by_login_tip" />
            <PreferenceScreen 
               android:key="@string/appwall_get_by_free"
               android:title="@string/appwall_get_by_free" 
               android:summary="@string/appwall_get_by_free_tip">
            </PreferenceScreen> 
            <!-- <PreferenceScreen 
               android:key="@string/appwall_get_by_money"
               android:title="@string/appwall_get_by_money" 
               android:summary="@string/appwall_get_by_money_tip">
            </PreferenceScreen>  -->
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/app_name">
	        <PreferenceScreen 
	           android:title="@string/version" 
	           android:summary="@string/version_name" />
	        <PreferenceScreen 
	           android:key="@string/feedback"
	           android:title="@string/feedback" 
	           android:summary="@string/feedback_tip">
	        </PreferenceScreen>
            <PreferenceScreen
               android:title="@string/download_pic_dir"
               android:summary="@string/download_pic_dir_detail"
            ></PreferenceScreen>
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/gale">
            <PreferenceScreen 
               android:key="@string/gale"
               android:title="@string/about_gale"
               android:summary="@string/about_gale_detail">
            </PreferenceScreen>
        </PreferenceCategory>
</PreferenceScreen>
