<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" 
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >
  <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
  >
	    <LinearLayout android:orientation="horizontal" 
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/top_bg" 
	        android:paddingLeft="8.0dip" 
	        android:paddingRight="4.0dip" 
	        android:layout_width="fill_parent" 
	        android:layout_height="34.0dip"
	        android:layout_alignLeft="@+id/rankLayout"
	        >
	        <TextView android:textSize="15.0sp" 
	            android:textColor="#ffffffff" 
	            android:layout_gravity="center_vertical" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:text="@string/hotest" />
	        <ImageView android:layout_gravity="center_vertical" 
	            android:paddingLeft="5.0dip" android:paddingRight="5.0dip" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:src="@drawable/bullet_orange" />
	        <TextView android:textSize="13.0sp" 
	            android:textColor="#ffffffff" 
	            android:layout_gravity="center_vertical" 
	            android:id="@+id/count" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:text="0" />
	        <TextView android:textSize="13.0sp" 
	            android:textColor="#ffffffff" 
	            android:layout_gravity="center_vertical" 
	            android:layout_width="wrap_content" 
	            android:layout_height="wrap_content" 
	            android:text="@string/count_backgrounds" />
	    </LinearLayout>
	    <LinearLayout android:id="@+id/rankLayout" 
	        android:orientation="horizontal" 
	        android:layout_width="wrap_content" 
	        android:layout_alignParentRight="true"
	        android:layout_height="34.0dip">
	        <ImageView 
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:src="@drawable/rank_arrow"
	           android:layout_marginRight="5.0dp"
	           android:layout_marginTop="2.0dp"
	           android:layout_marginBottom="2.0dp"
	        />
            <TextView android:id="@+id/rankType"
                android:layout_gravity="center_vertical"
                android:textColor="#ffffffff" 
                android:textSize="13.0sp" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:text="@string/rank_all"  
                android:layout_marginRight="8.0dp"
            />
	    </LinearLayout>
    </RelativeLayout>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/container_bg"
    >
	    <GridView android:id="@+id/myGrid"    
	        android:layout_width="fill_parent" 
	        android:layout_height="fill_parent"
	        android:numColumns="auto_fit"
	        android:stretchMode="columnWidth"
	        android:gravity="center"
	        android:layout_weight="1"
	    />
        <ProgressBar  
            android:id="@+id/progress" 
            android:visibility="invisible" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_centerInParent="true"
            style="?android:progressBarStyle" />
    </RelativeLayout>    
</LinearLayout>