<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/wallpaperLayout"
        android:layout_marginBottom="10.0dip"
        android:background="@android:color/black"
        android:gravity="center"
    >
        <com.galeapp.backgrounds.views.ResultView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY" 
            android:layout_margin="10.0dip"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:gravity="center"
        />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/wallpaperLayout"
        android:layout_gravity="center_horizontal" 
        android:orientation="vertical" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnsLayout"
        android:background="@drawable/image_bg"
        >
            <LinearLayout android:orientation="horizontal" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                >
                <ImageView
                    android:id="@+id/standard"
                    android:src="@drawable/tb_standard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                ></ImageView>
                <ImageView
                    android:id="@+id/fixed"
                    android:src="@drawable/tb_fixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"                    
                    android:layout_weight="1.0"          
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"          
                ></ImageView>
                <ImageView
                    android:id="@+id/entire"
                    android:src="@drawable/tb_entire"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1.0"          
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"          
                ></ImageView>
            </LinearLayout>
            <CheckBox 
                android:id="@+id/scrollable" 
                android:textSize="14.0sp" 
                android:background="@null" 
                android:paddingLeft="30.0dip" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:button="@drawable/cb_selector" 
                android:text="@string/scrollable" 
                android:layout_gravity="center"
                android:layout_marginBottom="5.0dip"
                />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" 
        android:id="@+id/btnsLayout"
        android:layout_gravity="bottom" 
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button android:textSize="13.0sp" 
            android:textColor="#ffffffff" 
            android:id="@+id/apply" 
            android:background="@drawable/button" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/apply" 
            android:layout_weight="1.0" />
        <Button android:textSize="13.0sp" 
            android:textColor="#ffffffff" 
            android:id="@+id/cancel" 
            android:background="@drawable/button" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/cancel" 
            android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>